# PdfToJsonService

./: CMakeLists.txt  main.cpp
goo/: GList.h  GString.h  gmem.h
splash/: Makefile
src/: pdf2json
xpdf/: Array.h  Catalog.h  Dict.h  Error.h  Function.h  GfxFont.h  GfxState.h  GlobalParams.h  Link.h  Object.h  OutputDev.h  PDFDoc.h  Page.h  Stream.h  UnicodeMap.h  XRef.h  pdffonts  pdfimages  pdfinfo  pdftotext
